Adiciona configuracao de canais WhatsApp
